--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
       <artifactId>slf4j-jdk14</artifactId>
       <version>2.0.9</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.14.0</version>
+    </dependency>
+
   </dependencies>
 
 </project>
